third_party/move/move-compiler-v2/tests/reference-safety/v1-tests/mutate_full_invalid.exp

Diagnostics:
error: cannot write local `x` since it is borrowed
   ┌─ tests/reference-safety/v1-tests/mutate_full_invalid.move:13:9
   │
12 │         let f = x; // error in v2 because of copy
   │                 - previously mutably borrowed here
13 │         *x = 0;
   │         ^^^^^^ write attempted here
14 │         *f;
   │         -- conflicting reference `f` used here

error: cannot write local `x` since it is borrowed
   ┌─ tests/reference-safety/v1-tests/mutate_full_invalid.move:18:9
   │
17 │         let f = freeze(x);
   │                 --------- previously borrowed here
18 │         *x = 0;
   │         ^^^^^^ write attempted here
19 │         *f;
   │         -- conflicting reference `f` used here

error: cannot write local `x` since it is borrowed
   ┌─ tests/reference-safety/v1-tests/mutate_full_invalid.move:23:9
   │
22 │         let f = id(x);
   │                 ----- previously borrowed here
23 │         *x = 0;
   │         ^^^^^^ write attempted here
24 │         *f;
   │         -- conflicting reference `f` used here

error: cannot write local `x` since it is borrowed
   ┌─ tests/reference-safety/v1-tests/mutate_full_invalid.move:28:9
   │
27 │         let f = id_mut(x);
   │                 --------- previously mutably borrowed here
28 │         *x = 0;
   │         ^^^^^^ write attempted here
29 │         *f;
   │         -- conflicting reference `f` used here
